HCM code refactoring